--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">   
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
   </head>    
-  <body style="height: 100% !important; background-color: #fafafa;">
+  <body style="height: 100% !important; background-color: #f0f0f0;">
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <!-- built files will be auto injected -->   
+
   </body>
 </html>
